<?xml version="1.0"?> 
<package format="3"> 
  <name>coverage_control</name> 
  <version>0.0.0</version> 
  <description>Decentralized adaptive Voronoi coverage control</description> 
 
  <maintainer email="you@example.com">you</maintainer> 
  <license>Apache License 2.0</license> 
 
  <buildtool_depend>ament_python</buildtool_depend> 
 
  <exec_depend>rclpy</exec_depend> 
  <exec_depend>geometry_msgs</exec_depend> 
  <exec_depend>nav_msgs</exec_depend> 
 
  <export> 
    <build_type>ament_python</build_type> 
  </export> 
</package>
